<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/grry"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/city" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:fontFamily="@font/raleway_semibold"
        android:inputType="textEmailAddress"
        android:text="E-posta giriniz"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="288dp" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:password="true"
        android:text="@string/parola"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="348dp" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tw1"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/tema"
            android:textStyle="bold"
            android:textColor="#000000" />


        <RadioGroup
            android:id="@+id/rgroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn1"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/a_k"
                android:textIsSelectable="false"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/rbtn2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/koyu"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/giri_yap"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/button" />


</LinearLayout>
