<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/doviz"
    android:orientation="vertical"
    tools:context=".MainActivity3"
    tools:visibility="visible">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/h1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="TL miktarı giriniz" />

    <EditText
        android:id="@+id/h2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Günlük döviz kuru" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-15dp"
            android:checked="true"
            android:text="Euro" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:text="Dolar" />

    </RadioGroup>

    <Button
        android:id="@+id/btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/hesapla"
        app:backgroundTint="@color/button" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/sonu"
        android:textStyle="bold"
        android:textColor="@color/material_on_primary_emphasis_high_type"
        android:textSize="22dp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/geri_k"
        android:textSize="12dp"
        app:backgroundTint="@color/button" />

</LinearLayout>
